<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="ttt_text">Play Tic Tac Toe</string>
    <string name="play">Play</string>
    <string name="setting">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_new_play">StartNewPlay</string>
    <string name="game">Tic Tac Toe!</string>
    <string name="play_settings">Settings</string>
    <string name="title_activity_open_settings">OpenSettings</string>
    <string name="title_activity_start_new_play_grid">StartNewPlayGrid</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New Game</string>
    <string name="title_activity_select_symbol">SelectSymbol</string>
    <string name="select_symbol">Select A Symbol</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="X_symbol">X</string>
    <string name="O_symbol">O</string>
    <string name="V_symbol">V</string>
    <string name="A_symbol">A</string>
    <string name="start_game">Start Game</string>

</resources>
